# perf-tests

./: .gitignore  MODULE.bazel  run_all_benchmarks.sh
daily-temps/: BUILD.bazel  README.md
daily-temps/cpp/: BUILD.bazel  daily_temperatures.cpp  daily_temperatures.h  daily_temperatures_benchmark.cpp  daily_temperatures_test.cpp
daily-temps/go/: BUILD.bazel  daily_temperatures.go  daily_temperatures_test.go
